19.07.10/packages/arm_cortex-a9_neon/node/index.md
---
---

# [archive](/archive/) / [19.07.10](/archive/19.07.10/) / [packages](/archive/19.07.10/packages/) / [arm_cortex-a9_neon](/archive/19.07.10/packages/arm_cortex-a9_neon/) / node


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 4.0K | |
| 🗄️ [Packages.gz](./Packages.gz) | 4.0K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 8.0K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [node-bcrypt_5.0.1-2_arm_cortex-a9_neon.ipk](./node-bcrypt_5.0.1-2_arm_cortex-a9_neon.ipk) | 604K | |
| 🗄️ [node-bufferutil_4.0.6-1_arm_cortex-a9_neon.ipk](./node-bufferutil_4.0.6-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [node-npm_v12.22.12-1_arm_cortex-a9_neon.ipk](./node-npm_v12.22.12-1_arm_cortex-a9_neon.ipk) | 3.9M | |
| 🗄️ [node-red_2.2.2-1_arm_cortex-a9_neon.ipk](./node-red_2.2.2-1_arm_cortex-a9_neon.ipk) | 11M | |
| 🗄️ [node-utf-8-validate_5.0.9-1_arm_cortex-a9_neon.ipk](./node-utf-8-validate_5.0.9-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [node-zigbee2mqtt_1.21.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.21.0-1_arm_cortex-a9_neon.ipk) | 4.1M | |
| 🗄️ [node-zigbee2mqtt_1.21.1-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.21.1-1_arm_cortex-a9_neon.ipk) | 4.2M | |
| 🗄️ [node-zigbee2mqtt_1.21.2-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.21.2-1_arm_cortex-a9_neon.ipk) | 4.2M | |
| 🗄️ [node-zigbee2mqtt_1.22.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.0-1_arm_cortex-a9_neon.ipk) | 4.4M | |
| 🗄️ [node-zigbee2mqtt_1.22.1-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.1-1_arm_cortex-a9_neon.ipk) | 6.2M | |
| 🗄️ [node-zigbee2mqtt_1.22.1-7_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.1-7_arm_cortex-a9_neon.ipk) | 6.2M | |
| 🗄️ [node-zigbee2mqtt_1.22.2-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.2-1_arm_cortex-a9_neon.ipk) | 6.8M | |
| 🗄️ [node-zigbee2mqtt_1.23.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.23.0-1_arm_cortex-a9_neon.ipk) | 6.8M | |
| 🗄️ [node-zigbee2mqtt_1.24.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.24.0-1_arm_cortex-a9_neon.ipk) | 5.2M | |
| 🗄️ [node_v12.22.12-1_arm_cortex-a9_neon.ipk](./node_v12.22.12-1_arm_cortex-a9_neon.ipk) | 6.8M | |

