21.02.7/packages/arm_cortex-a9_neon/node/index.md
---
---

# [archive](/archive/) / [21.02.7](/archive/21.02.7/) / [packages](/archive/21.02.7/packages/) / [arm_cortex-a9_neon](/archive/21.02.7/packages/arm_cortex-a9_neon/) / node


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 4.0K | |
| 🗄️ [Packages.gz](./Packages.gz) | 4.0K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 4.0K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [node-bcrypt_5.1.1-1_arm_cortex-a9_neon.ipk](./node-bcrypt_5.1.1-1_arm_cortex-a9_neon.ipk) | 616K | |
| 🗄️ [node-bufferutil_4.0.7-1_arm_cortex-a9_neon.ipk](./node-bufferutil_4.0.7-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [node-bufferutil_4.0.8-1_arm_cortex-a9_neon.ipk](./node-bufferutil_4.0.8-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [node-firmata_2.3.0-2_arm_cortex-a9_neon.ipk](./node-firmata_2.3.0-2_arm_cortex-a9_neon.ipk) | 32K | |
| 🗄️ [node-hap-nodejs_0.11.1-1_arm_cortex-a9_neon.ipk](./node-hap-nodejs_0.11.1-1_arm_cortex-a9_neon.ipk) | 1.7M | |
| 🗄️ [node-johnny-five_2.1.0-1_arm_cortex-a9_neon.ipk](./node-johnny-five_2.1.0-1_arm_cortex-a9_neon.ipk) | 464K | |
| 🗄️ [node-mdns_2.7.2-3_arm_cortex-a9_neon.ipk](./node-mdns_2.7.2-3_arm_cortex-a9_neon.ipk) | 136K | |
| 🗄️ [node-mqtt_5.0.4-1_arm_cortex-a9_neon.ipk](./node-mqtt_5.0.4-1_arm_cortex-a9_neon.ipk) | 1.8M | |
| 🗄️ [node-mqtt_5.0.5-1_arm_cortex-a9_neon.ipk](./node-mqtt_5.0.5-1_arm_cortex-a9_neon.ipk) | 1.8M | |
| 🗄️ [node-mqtt_5.1.2-1_arm_cortex-a9_neon.ipk](./node-mqtt_5.1.2-1_arm_cortex-a9_neon.ipk) | 1.9M | |
| 🗄️ [node-npm_v16.20.2-1_arm_cortex-a9_neon.ipk](./node-npm_v16.20.2-1_arm_cortex-a9_neon.ipk) | 1.8M | |
| 🗄️ [node-npm_v16.20.2-2_arm_cortex-a9_neon.ipk](./node-npm_v16.20.2-2_arm_cortex-a9_neon.ipk) | 1.8M | |
| 🗄️ [node-red-contrib-gpio_0.51.0-3_arm_cortex-a9_neon.ipk](./node-red-contrib-gpio_0.51.0-3_arm_cortex-a9_neon.ipk) | 616K | |
| 🗄️ [node-red-contrib-homekit-bridged_1.5.0-1_arm_cortex-a9_neon.ipk](./node-red-contrib-homekit-bridged_1.5.0-1_arm_cortex-a9_neon.ipk) | 176K | |
| 🗄️ [node-red-dashboard_3.6.0-1_arm_cortex-a9_neon.ipk](./node-red-dashboard_3.6.0-1_arm_cortex-a9_neon.ipk) | 3.3M | |
| 🗄️ [node-red-node-discovery_0.0.23-1_arm_cortex-a9_neon.ipk](./node-red-node-discovery_0.0.23-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [node-red-node-serialport_1.0.4-1_arm_cortex-a9_neon.ipk](./node-red-node-serialport_1.0.4-1_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [node-red_3.0.2-2_arm_cortex-a9_neon.ipk](./node-red_3.0.2-2_arm_cortex-a9_neon.ipk) | 11M | |
| 🗄️ [node-red_3.1.0-1_arm_cortex-a9_neon.ipk](./node-red_3.1.0-1_arm_cortex-a9_neon.ipk) | 13M | |
| 🗄️ [node-serialport-bindings-cpp_10.8.0-1_arm_cortex-a9_neon.ipk](./node-serialport-bindings-cpp_10.8.0-1_arm_cortex-a9_neon.ipk) | 128K | |
| 🗄️ [node-serialport-bindings-cpp_12.0.1-1_arm_cortex-a9_neon.ipk](./node-serialport-bindings-cpp_12.0.1-1_arm_cortex-a9_neon.ipk) | 124K | |
| 🗄️ [node-serialport_10.5.0-1_arm_cortex-a9_neon.ipk](./node-serialport_10.5.0-1_arm_cortex-a9_neon.ipk) | 52K | |
| 🗄️ [node-serialport_12.0.0-1_arm_cortex-a9_neon.ipk](./node-serialport_12.0.0-1_arm_cortex-a9_neon.ipk) | 48K | |
| 🗄️ [node-utf-8-validate_6.0.3-1_arm_cortex-a9_neon.ipk](./node-utf-8-validate_6.0.3-1_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [node-ws_8.13.0-1_arm_cortex-a9_neon.ipk](./node-ws_8.13.0-1_arm_cortex-a9_neon.ipk) | 36K | |
| 🗄️ [node-ws_8.14.1-1_arm_cortex-a9_neon.ipk](./node-ws_8.14.1-1_arm_cortex-a9_neon.ipk) | 36K | |
| 🗄️ [node-ws_8.14.2-1_arm_cortex-a9_neon.ipk](./node-ws_8.14.2-1_arm_cortex-a9_neon.ipk) | 36K | |
| 🗄️ [node-zigbee2mqtt_1.22.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.0-1_arm_cortex-a9_neon.ipk) | 4.4M | |
| 🗄️ [node-zigbee2mqtt_1.22.1-7_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.1-7_arm_cortex-a9_neon.ipk) | 6.2M | |
| 🗄️ [node-zigbee2mqtt_1.22.2-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.2-1_arm_cortex-a9_neon.ipk) | 6.8M | |
| 🗄️ [node-zigbee2mqtt_1.23.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.23.0-1_arm_cortex-a9_neon.ipk) | 6.8M | |
| 🗄️ [node-zigbee2mqtt_1.24.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.24.0-1_arm_cortex-a9_neon.ipk) | 5.2M | |
| 🗄️ [node-zigbee2mqtt_1.25.1-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.25.1-1_arm_cortex-a9_neon.ipk) | 5.3M | |
| 🗄️ [node-zigbee2mqtt_1.25.2-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.25.2-1_arm_cortex-a9_neon.ipk) | 5.3M | |
| 🗄️ [node-zigbee2mqtt_1.26.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.26.0-1_arm_cortex-a9_neon.ipk) | 5.9M | |
| 🗄️ [node-zigbee2mqtt_1.27.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.27.0-1_arm_cortex-a9_neon.ipk) | 6.1M | |
| 🗄️ [node-zigbee2mqtt_1.27.2-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.27.2-1_arm_cortex-a9_neon.ipk) | 6.1M | |
| 🗄️ [node-zigbee2mqtt_1.28.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.28.0-1_arm_cortex-a9_neon.ipk) | 6.6M | |
| 🗄️ [node-zigbee2mqtt_1.28.2-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.28.2-1_arm_cortex-a9_neon.ipk) | 6.4M | |
| 🗄️ [node-zigbee2mqtt_1.28.4-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.28.4-1_arm_cortex-a9_neon.ipk) | 5.6M | |
| 🗄️ [node-zigbee2mqtt_1.30.2-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.30.2-1_arm_cortex-a9_neon.ipk) | 6.4M | |
| 🗄️ [node-zigbee2mqtt_1.30.3-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.30.3-1_arm_cortex-a9_neon.ipk) | 6.4M | |
| 🗄️ [node-zigbee2mqtt_1.30.4-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.30.4-1_arm_cortex-a9_neon.ipk) | 6.4M | |
| 🗄️ [node-zigbee2mqtt_1.31.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.31.0-1_arm_cortex-a9_neon.ipk) | 6.5M | |
| 🗄️ [node-zigbee2mqtt_1.31.2-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.31.2-1_arm_cortex-a9_neon.ipk) | 6.5M | |
| 🗄️ [node-zigbee2mqtt_1.32.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.32.0-1_arm_cortex-a9_neon.ipk) | 6.5M | |
| 🗄️ [node-zigbee2mqtt_1.32.1-2_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.32.1-2_arm_cortex-a9_neon.ipk) | 6.5M | |
| 🗄️ [node-zigbee2mqtt_1.33.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.33.0-1_arm_cortex-a9_neon.ipk) | 6.8M | |
| 🗄️ [node-zigbee2mqtt_1.33.1-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.33.1-1_arm_cortex-a9_neon.ipk) | 6.8M | |
| 🗄️ [node_v14.21.3-1_arm_cortex-a9_neon.ipk](./node_v14.21.3-1_arm_cortex-a9_neon.ipk) | 9.5M | |
| 🗄️ [node_v16.20.1-1_arm_cortex-a9_neon.ipk](./node_v16.20.1-1_arm_cortex-a9_neon.ipk) | 11M | |
| 🗄️ [node_v16.20.2-1_arm_cortex-a9_neon.ipk](./node_v16.20.2-1_arm_cortex-a9_neon.ipk) | 11M | |
| 🗄️ [node_v16.20.2-2_arm_cortex-a9_neon.ipk](./node_v16.20.2-2_arm_cortex-a9_neon.ipk) | 12M | |

